New: Nginx conf

--- a/compose/.env
+++ b/compose/.env
@@ -1,3 +1,4 @@
 DEBUG=true
 INSTANCES=http,test.silicornio.com,10:80|http,test2.silicornio2.com,11:80
 CERTBOT_EMAILS=admin@silicornio.com|admin@silicornio2.com
+NGINX_CONF=client_max_body_size 300M;
