--- a/proxy/conf/app_instance_http.conf
+++ b/proxy/conf/app_instance_http.conf
@@ -2,8 +2,7 @@ server {
     listen 80;
     server_name ${DOMAIN};
 
-    # change limits to avoid HTTP 413 for large data
-    # client_max_body_size 300M;
+    ${NGINX_CONF}
     
     location / {
         proxy_set_header        X-Real-IP $remote_addr;
