Chore: docker compose configuration conf files visibles

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         volumes:
             - ./letsencrypt:/etc/letsencrypt
             - ./logs:/var/log/letsencrypt
+            - ./conf:/etc/nginx/user.conf.d
         ports:
             - 80:80/tcp
             - 443:443/tcp
