--- a/proxy/conf/app_instance_https.conf
+++ b/proxy/conf/app_instance_https.conf
@@ -10,7 +10,7 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_set_header        Host $http_host;
         proxy_intercept_errors  on;
-        proxy_pass              http://172.16.219.${IP}:${PORT}$request_uri;
+        proxy_pass              http://${IP}:${PORT}$request_uri;
     }
 
     ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
