--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
     nginx:
         container_name: proxy_nginx
-        build: nginx/.
+        build: proxy/.
         environment:
             DEBUG: $DEBUG
             INSTANCES: $INST_TEST|$INST_TEST2
